[workspace]
members = [
  ".",
  "macro"
]

[package]
name = "cgi2"
version = "0.7.0"
authors = ["Amanda McCann <rory@technomancy.org>"]
license = "AGPL-3.0"
repository = "https://github.com/amandasaurus/rust-cgi"
description = "Create CGI programmes"
keywords = ["http", "cgi", "web"]
readme = "README.adoc"
edition = "2021"

[lib]
name = "cgi"

[dependencies]
http = "1.0"
cgi-attributes = { path = "macro", version = "0.1.0" }
